5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1613_2426.log
== TEST (2019-05-01 18:12:05) 
-- CODE:
t=float(input("Digite o tempo gasto:"))
v=float(input("Digite a velocidade media:"))
dist=v*t
quant.lg=dist*12/1
print(dist)
print(quant.lg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    quant.lg=dist*12/1
NameError: name 'quant' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:12:54) 
-- CODE:
t=float(input("Digite o tempo gasto:"))
v=float(input("Digite a velocidade media:"))
dist=v*t
quant.lg="dist"*12/1
print(dist)
print(quant.lg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    quant.lg="dist"*12/1
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:15:42) 
-- CODE:
t=float(input("Digite o tempo gasto:"))
v=float(input("Digite a velocidade media:"))
dist=v*t
quant.lg=dist/12
print(dist)
print(quant.lg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    quant.lg=dist/12
NameError: name 'quant' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:16:25) 
-- CODE:
t=float(input("Digite o tempo gasto:"))
v=float(input("Digite a velocidade media:"))
dist=v*t
quant_lg="dist"/12
print(dist)
print(quant_lg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    quant_lg="dist"/12
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:17:27) 
-- CODE:
t=float(input("Digite o tempo gasto:"))
v=float(input("Digite a velocidade media:"))
dist=v*t
quant_lg=v*t/12
print(dist)
print(quant_lg)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:17:45) 
-- CODE:
t=float(input("Digite o tempo gasto:"))
v=float(input("Digite a velocidade media:"))
dist=v*t
quant_lg=v*t/12
print(dist)
print(quant_lg)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:18:14) 
-- CODE:
t=float(input("Digite o tempo gasto:"))
v=float(input("Digite a velocidade media:"))
dist=v*t
quant_lg=v*t/12
print(dist)
print(quant_lg)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:18:17) 
-- CODE:
t=float(input("Digite o tempo gasto:"))
v=float(input("Digite a velocidade media:"))
dist=v*t
quant_lg=v*t/12
print(dist)
print(quant_lg)
-- EXECUTION TIME:
0.128298
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
